--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ pytest==6.2.4
 pytest-django==4.4.0
 pytest-pythonpath==0.7.3
 djangorestframework-simplejwt==5.2.2
+django-filter==2.4.0
+pandas==1.5.3
